build/test/lib/errors/not-implemented.mjs
import { Incident } from "incident";
export const name = "NotImplemented";
export function createNotImplementedError(message) {
    return Incident(name, message);
}

//# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uL3NyYy9saWIvZXJyb3JzL25vdC1pbXBsZW1lbnRlZC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSxPQUFPLEVBQUUsUUFBUSxFQUFFLE1BQU0sVUFBVSxDQUFDO0FBR3BDLE1BQU0sQ0FBQyxNQUFNLElBQUksR0FBUyxnQkFBZ0IsQ0FBQztBQVEzQyxNQUFNLFVBQVUseUJBQXlCLENBQUMsT0FBZTtJQUN2RCxPQUFPLFFBQVEsQ0FBQyxJQUFJLEVBQUUsT0FBTyxDQUFDLENBQUM7QUFDakMsQ0FBQyIsImZpbGUiOiJsaWIvZXJyb3JzL25vdC1pbXBsZW1lbnRlZC5qcyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB7IEluY2lkZW50IH0gZnJvbSBcImluY2lkZW50XCI7XG5cbmV4cG9ydCB0eXBlIE5hbWUgPSBcIk5vdEltcGxlbWVudGVkXCI7XG5leHBvcnQgY29uc3QgbmFtZTogTmFtZSA9IFwiTm90SW1wbGVtZW50ZWRcIjtcblxuZXhwb3J0IGludGVyZmFjZSBEYXRhIHtcbn1cblxuZXhwb3J0IHR5cGUgQ2F1c2UgPSB1bmRlZmluZWQ7XG5leHBvcnQgdHlwZSBOb3RJbXBsZW1lbnRlZEVycm9yID0gSW5jaWRlbnQ8RGF0YSwgTmFtZSwgQ2F1c2U+O1xuXG5leHBvcnQgZnVuY3Rpb24gY3JlYXRlTm90SW1wbGVtZW50ZWRFcnJvcihtZXNzYWdlOiBzdHJpbmcpOiBOb3RJbXBsZW1lbnRlZEVycm9yIHtcbiAgcmV0dXJuIEluY2lkZW50KG5hbWUsIG1lc3NhZ2UpO1xufVxuIl0sInNvdXJjZVJvb3QiOiIuLi8uLiJ9
